--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
               android:dividerPadding="16dp"
               android:orientation="horizontal"
               android:showDividers="middle"
-              android:background="@color/color_textView_background">
+              android:background="@color/gray">
 
 
                 <TextView
@@ -29,5 +29,55 @@
                     android:text="5 \nПроектов"
                     android:layout_weight="0.25"/>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/spacing_small_8"
+            android:layout_marginBottom="@dimen/spacing_small_8">
+                <ImageView
+                    style="@style/icon"
+                    android:src="@drawable/ic_call_black_24dp"
+                    android:layout_weight="0.2"
+                    android:layout_gravity="center_vertical"/>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/size_big_72"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:gravity="center_vertical">
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                        <EditText
+                            android:id="@+id/phone"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="phone"
+                            android:text="89826043010"
+                            android:hint="Мобильный телефон"
+                            android:enabled="false"
+                            android:textColor="@color/black"
+                            android:textColorHint="@color/gray"
+                            android:focusable="false"/>
+                </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+                <ImageView
+                    style="@style/icon"
+                    android:src="@drawable/ic_phone_in_talk_black_24dp"
+                    android:layout_weight="0.2"
+                    android:layout_gravity="center_vertical"/>
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line_size"
+            android:background="@color/gray"
+            android:layout_marginLeft="@dimen/spacing_larger_72"/>
+
+
 
 </LinearLayout>
