--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,12 @@
         <item name="android:lineSpacingMultiplier">1.2</item>
         <item name="android:padding">0dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/color_textView_blue</item>
+        <item name="android:textColor">@color/color_textView_white</item>
+    </style>
+
+    <style name="icon">
+        <item name="android:layout_width">@dimen/size_small_24</item>
+        <item name="android:layout_height">@dimen/size_small_24</item>
     </style>
 
 </resources>
