--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+
+ <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+               xmlns:tools="http://schemas.android.com/tools"
+               tools:context=".ui.activities.MainActivity"
+               android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
         <LinearLayout
               android:layout_width="match_parent"
@@ -12,7 +15,6 @@
               android:orientation="horizontal"
               android:showDividers="middle"
               android:background="@color/gray">
-
 
                 <TextView
                     style="@style/AppTextView"
@@ -125,5 +127,151 @@
             android:background="@color/gray"
             android:layout_marginLeft="@dimen/spacing_larger_72"/>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/spacing_small_8"
+            android:layout_marginBottom="@dimen/spacing_small_8">
+                <ImageView
+                    style="@style/icon"
+                    android:src="@drawable/vk"
+                    android:layout_weight="0.2"
+                    android:layout_gravity="center_vertical"/>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/size_big_72"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:gravity="center_vertical">
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                                <EditText
+                                    android:id="@+id/VK"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:inputType="textEmailAddress"
+                                    android:text="https://vk.com/idashevchuk"
+                                    android:hint="Профиль в VK"
+                                    android:enabled="false"
+                                    android:textColor="@color/black"
+                                    android:textColorHint="@color/gray"
+                                    android:focusable="false"/>
+                        </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+                <ImageView
+                    style="@style/icon"
+                    android:src="@drawable/ic_visibility_black_24dp"
+                    android:layout_weight="0.2"
+                    android:layout_gravity="center_vertical"/>
+
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line_size"
+            android:background="@color/gray"
+            android:layout_marginLeft="@dimen/spacing_larger_72"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/spacing_small_8"
+            android:layout_marginBottom="@dimen/spacing_small_8">
+                <ImageView
+                    style="@style/icon"
+                    android:src="@drawable/github_circle"
+
+                    android:layout_weight="0.2"
+                    android:layout_gravity="center_vertical"
+                    />
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/size_big_72"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:gravity="center_vertical">
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                                <EditText
+                                    android:id="@+id/gitHub"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:inputType="textEmailAddress"
+                                    android:text="github.com/antshevchuk"
+                                    android:hint="Репозиторий"
+                                    android:enabled="false"
+                                    android:textColor="@color/black"
+                                    android:textColorHint="@color/gray"
+                                    android:focusable="false"/>
+                        </android.support.design.widget.TextInputLayout>
+                </LinearLayout>
+                <ImageView
+                    style="@style/icon"
+                    android:src="@drawable/ic_visibility_black_24dp"
+                    android:layout_weight="0.2"
+                    android:layout_gravity="center_vertical"/>
+
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line_size"
+            android:background="@color/gray"
+            android:layout_marginLeft="@dimen/spacing_larger_72"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/spacing_small_8"
+        android:layout_marginBottom="@dimen/spacing_small_8">
+        <ImageView
+            style="@style/icon"
+            android:src="@drawable/account_circle"
+            android:layout_weight="0.2"
+            android:layout_gravity="center_vertical"
+            />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:gravity="center_vertical">
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/aboutMe"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
+                    android:text="There are few workarounds you could add in order to get this to work but there is no need for that."
+                    android:hint="О себе"
+                    android:enabled="false"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/gray"
+                    android:focusable="false"/>
+            </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
+        <ImageView
+            style="@style/icon"
+            android:src="@drawable/ic_visibility_black_24dp"
+            android:layout_weight="0.2"
+            android:layout_gravity="center_vertical"/>
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
+
+
+
